--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,8 @@ yarn-error.log
 # Visual Studio Code
 .vscode/
 !.vscode/settings.json
+!.vscode/appsettings.Development.json
+!.vscode/appsettings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
