--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -9,7 +9,8 @@
   "CloudinarySettings":{
     "CloudName": "dua7fksrq",
     "ApiKey": "435531898285919",
-    "ApiSecret": "HoySTpxR3pgz9Swi5gw1jw0_WB4"
+    "ApiSecret": "HoySTpxR3pgz9Swi5gw1jw0_WB4",
+    "test": "sssss"
   },
 
   "AllowedHosts": "*"
